--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Dating App</a>
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
           <li class="nav-item">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -11,8 +12,19 @@
           <li class="nav-item">
             <a class="nav-link">Messages</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()">Logout</a>
+          </li>
         </ul>
-        <form #loginFrom="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+
+        <div class="dropdown" *ngIf="loggedIn">
+          <a href="" class="dropdown-toggele text-light">Welcome user</a>
+          <div class="dropdown-menu">
+            <a href="" class="dropdown-item">Edit Profile</a>
+            <a href="" class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
+        </div>
+        <form *ngIf="!loggedIn" #loginFrom="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
             <input 
               name="username"
               [(ngModel)]="model.username"
