--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
 
         <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
           <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome user</a>
-          <div class="dropdown-menu" *dropdownMenu>
+          <div class="dropdown-menu mt-3" *dropdownMenu>
             <a href="" class="dropdown-item">Edit Profile</a>
             <a href="" class="dropdown-item" (click)="logout()">Logout</a>
           </div>
