--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -18,7 +18,7 @@
             </option>
         </select>
     </div>
-    
+
     <div class="mb-3">
         <input type="password"
                 class="form-control" 
@@ -30,6 +30,6 @@
 
     <div class="text-center">
         <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+        <button class="btn btn-danger" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
