66. Creating some more components & Creating links

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px">
-    <app-home></app-home>
+    <!-- The <router-outlet> element serves as a placeholder for displaying the content of routed components.
+     When navigating between different routes, the content of the corresponding component will be rendered here. -->
+    <router-outlet></router-outlet>
 </div>
