--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
             <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
           </li>
