--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,18 @@
-<div class="card mb-4 border border-success border-1" *ngIf="member" >
+<div class="card mb-4 border border-secondary " *ngIf="member" >
     <div class="card-img-wrapper">
         <img src="{{ member.photoUrl}}" alt="{{ member.knownAs}}" class="card-img-top">
+
+        <ul class="list-inline member-icons animate text-center">
+            <li class="list-inline-item">
+                <button class="btn btn-secondary"><i class="fa fa-user"></i></button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-light"><i class="fa fa-envelope"></i></button>
+            </li>
+        </ul>
     </div>
 
     <div class="card-body p-1">
