--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -4,7 +4,7 @@
 
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button class="btn btn-secondary"><i class="fa fa-user"></i></button>
+                <button routerLink="/members/{{member.userName}}" class="btn btn-secondary"><i class="fa fa-user"></i></button>
             </li>
             <li class="list-inline-item">
                 <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
