--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,8 +44,8 @@
                 <p>{{member.interests}}</p>
             </tab>
 
-            <tab heading="Photos">
-                <p>Photo will go here</p>
+            <tab heading="Photos" #photoTab="tab">
+                <gallery *ngIf="photoTab.active" [items]="images" class="gallery"></gallery>
             </tab>
 
             <tab heading="Messages">
